force-app/main/default/objects/SKP_Contract_Type_Mapping__c/SKP_Contract_Type_Mapping__c.object-meta.xml
<CustomObject>
    <label>SKP Contract Type Mapping</label>
    <nameField>
        <displayFormat>SKPMAP-{000000}</displayFormat>
        <label>SKP Contract Type Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKP Contract Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>