force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Admin_Fee_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Reason_Code__c</fullName>
    <label>Admin Fee Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>