force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schedule A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>