force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Fuel_Surcharge_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_Indicator__c</fullName>
    <label>Fuel Surcharge Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>