force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Increase_Cap_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Increase_Cap_Quoted__c</fullName>
    <label>Increase Cap Quoted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>