force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Insurance_Special__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Special__c</fullName>
    <label>Insurance Special</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>