force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Late_Fee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Indicator__c</fullName>
    <label>Late Fee Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>