force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Net_Payment__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment__c</fullName>
    <label>Net Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>