force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Next_Increase_Date_Storage_and_Service__c.field-meta.xml
<CustomField>
    <fullName>Next_Increase_Date_Storage_and_Service__c</fullName>
    <label>Next Increase Date Storage and Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>add 12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>