force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Non_Standard_Version__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Version__c</fullName>
    <label>Non Standard Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Later Date</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>