force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Rate_Increase_Notice__c.field-meta.xml
<CustomField>
    <fullName>Rate_Increase_Notice__c</fullName>
    <label>Rate Increase Notice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>