force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/Renewal_term__c.field-meta.xml
<CustomField>
    <fullName>Renewal_term__c</fullName>
    <label>Renewal term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>Docusign term/default to 12</fullName>
            </value>
            <value>
                <fullName>Default to 12 Warning Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>