force-app/main/default/objects/SKP_Contract_Type_Mapping__c/fields/RM_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>RM_Admin_Fee__c</fullName>
    <label>RM Admin Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>