force-app/main/default/objects/SKP_Contract_Type_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Version__c</columns>
    <columns>Excess_Value_of_Deposit__c</columns>
    <columns>LOL_UOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>